fix table overflow on small devices

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4369,9 +4369,6 @@ textarea.form-control.is-invalid {
 .-m-2 {
   margin: -0.5rem;
 }
-.m-6 {
-  margin: 1.5rem;
-}
 .my-1 {
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
@@ -4392,10 +4389,6 @@ textarea.form-control.is-invalid {
   margin-top: auto;
   margin-bottom: auto;
 }
-.-my-2 {
-  margin-top: -0.5rem;
-  margin-bottom: -0.5rem;
-}
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
@@ -4415,6 +4408,10 @@ textarea.form-control.is-invalid {
 .mx-1 {
   margin-left: 0.25rem;
   margin-right: 0.25rem;
+}
+.-my-2 {
+  margin-top: -0.5rem;
+  margin-bottom: -0.5rem;
 }
 .mt-1 {
   margin-top: 0.25rem;
@@ -4578,39 +4575,32 @@ textarea.form-control.is-invalid {
 .h-40 {
   height: 10rem;
 }
-.h-fit {
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
-}
 .h-2 {
   height: 0.5rem;
 }
 .h-48 {
   height: 12rem;
 }
-.h-\[calc\(100\%-10rem\)\] {
-  height: calc(100% - 10rem);
-}
-.h-\[calc\(100vh-10rem\)\] {
-  height: calc(100vh - 10rem);
-}
-.h-\[calc\(100vh-12rem\)\] {
-  height: calc(100vh - 12rem);
-}
-.h-max {
-  height: -webkit-max-content;
-  height: -moz-max-content;
-  height: max-content;
+.max-h-\[calc\(100vh-17rem\)\] {
+  max-height: calc(100vh - 17rem);
 }
 .max-h-screen {
   max-height: 100vh;
 }
-.max-h-80 {
-  max-height: 20rem;
-}
 .max-h-\[calc\(100vh-12rem\)\] {
   max-height: calc(100vh - 12rem);
+}
+.max-h-\[calc\(100vh-18rem\)\] {
+  max-height: calc(100vh - 18rem);
+}
+.max-h-\[calc\(100vh-19rem\)\] {
+  max-height: calc(100vh - 19rem);
+}
+.max-h-\[calc\(100vh-20rem\)\] {
+  max-height: calc(100vh - 20rem);
+}
+.max-h-\[calc\(100vh-22rem\)\] {
+  max-height: calc(100vh - 22rem);
 }
 .min-h-screen {
   min-height: 100vh;
@@ -4663,11 +4653,6 @@ textarea.form-control.is-invalid {
 .w-3 {
   width: 0.75rem;
 }
-.w-fit {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-}
 .w-2 {
   width: 0.5rem;
 }
@@ -4677,11 +4662,29 @@ textarea.form-control.is-invalid {
 .w-36 {
   width: 9rem;
 }
+.w-\[calc\(100vw-14rem\)\] {
+  width: calc(100vw - 14rem);
+}
+.w-\[calc\(100vw-640px\)\] {
+  width: calc(100vw - 640px);
+}
+.w-\[calc\(100vw-12rem\)\] {
+  width: calc(100vw - 12rem);
+}
+.w-\[calc\(100vw\)\] {
+  width: calc(100vw);
+}
 .min-w-full {
   min-width: 100%;
 }
 .min-w-0 {
   min-width: 0px;
+}
+.min-w-\[640px\] {
+  min-width: 640px;
+}
+.min-w-\[400px\] {
+  min-width: 400px;
 }
 .max-w-7xl {
   max-width: 80rem;
@@ -6042,19 +6045,14 @@ select {
     margin-bottom: -1px;
   }
 
-  .sm\:-mx-6 {
-    margin-left: -1.5rem;
-    margin-right: -1.5rem;
-  }
-
   .sm\:my-0 {
     margin-top: 0px;
     margin-bottom: 0px;
   }
 
-  .sm\:-mx-2 {
-    margin-left: -0.5rem;
-    margin-right: -0.5rem;
+  .sm\:-mx-6 {
+    margin-left: -1.5rem;
+    margin-right: -1.5rem;
   }
 
   .sm\:ml-10 {
@@ -6097,6 +6095,10 @@ select {
     height: 5rem;
   }
 
+  .sm\:max-h-\[calc\(100vh-17rem\)\] {
+    max-height: calc(100vh - 17rem);
+  }
+
   .sm\:max-w-md {
     max-width: 28rem;
   }
@@ -6129,6 +6131,10 @@ select {
     justify-content: space-between;
   }
 
+  .sm\:overflow-y-hidden {
+    overflow-y: hidden;
+  }
+
   .sm\:rounded-lg {
     border-radius: 0.5rem;
   }
@@ -6141,16 +6147,6 @@ select {
   .sm\:px-2 {
     padding-left: 0.5rem;
     padding-right: 0.5rem;
-  }
-
-  .sm\:px-3 {
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
-  }
-
-  .sm\:px-4 {
-    padding-left: 1rem;
-    padding-right: 1rem;
   }
 
   .sm\:pt-0 {
@@ -6218,6 +6214,18 @@ select {
 
   .md\:hidden {
     display: none;
+  }
+
+  .md\:max-h-\[calc\(100vh-12rem\)\] {
+    max-height: calc(100vh - 12rem);
+  }
+
+  .md\:max-h-\[calc\(100vh-11rem\)\] {
+    max-height: calc(100vh - 11rem);
+  }
+
+  .md\:max-h-\[calc\(100vh-11\.5rem\)\] {
+    max-height: calc(100vh - 11.5rem);
   }
 
   .md\:w-4\/12 {
@@ -6289,11 +6297,6 @@ select {
     padding-right: 0.25rem;
   }
 
-  .md\:px-0 {
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-
   .md\:pt-2 {
     padding-top: 0.5rem;
   }
@@ -6303,11 +6306,6 @@ select {
   .lg\:-mx-8 {
     margin-left: -2rem;
     margin-right: -2rem;
-  }
-
-  .lg\:-mx-2 {
-    margin-left: -0.5rem;
-    margin-right: -0.5rem;
   }
 
   .lg\:block {
@@ -6339,16 +6337,6 @@ select {
     padding-left: 0.5rem;
     padding-right: 0.5rem;
   }
-
-  .lg\:px-3 {
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
-  }
-
-  .lg\:px-4 {
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
 }
 @media (min-width: 1536px) {
 
@@ -6367,3 +6355,5 @@ select {
     color: rgb(209 213 219 / var(--tw-placeholder-opacity));
   }
 }
+
+
